adcionado divs e class da estrutura do logo e nav-br do site

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Mario Bros Service</title>
 </head>
 <body>
-    
+    <div class="container">
+        <img src="img/logo.png" alt="Logo do Mario Bros">
+    </div>
+
+    <div class="">
+        <ul class="nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Fale Conosco</a></li>
+            <li><a href="#">Nosso Serviço</a></li>
+        </ul>
+    </div>
+
+    <div>
+        
+    </div>
+
 </body>
 </html>
