--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <div class="container">
-        <img src="img/logo.png" alt="Logo do Mario Bros">
+        <img src="img/icon.png" alt="icon do Mario Bros">
     </div>
 
-    <div class="">
-        <ul class="nav">
+    <div class="navbar">
+        <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Fale Conosco</a></li>
             <li><a href="#">Nosso Serviço</a></li>
@@ -19,8 +19,13 @@
     </div>
 
     <div>
-        
-    </div>
+        <img src="img/logo.png" alt="Logo do Mario Bros">
+        <p> Encanadores Mario & Luigi - Resolvendo Seus Problemas Hidráulicos Com Estilo!</p>
 
+        <p>Você já se deparou com uma situação de emergência com encanamento? Vazamentos inesperados, canos
+            entupidos ou torneiras que não param de pingar? Não se preocupe, porque estamos aqui para salvar o dia!
+            Apresentamos a vocês os encanadores mais famosos do Reino dos Cogumelos - Mario e Luigi!</p>
+    </div>
+    <button>Entre Contato</button>
 </body>
 </html>
