atualizado, e adcionado margin e padding e sizing no site

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
             entupidos ou torneiras que não param de pingar? Não se preocupe, porque estamos aqui para salvar o dia!
             Apresentamos a vocês os encanadores mais famosos do Reino dos Cogumelos - Mario e Luigi!</p>
     </div>
-    <button>Entre Contato</button>
+    <button>Entre em Contato</button>
 </body>
 </html>
