--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
     </div>
 
-    <div>
+    <div class="content">
         <img src="img/logo.png" alt="Logo do Mario Bros">
         <p> Encanadores Mario & Luigi - Resolvendo Seus Problemas Hidráulicos Com Estilo!</p>
 
