adicionado seção de imagem e ajustado estilo do botão

--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
             Apresentamos a vocês os encanadores mais famosos do Reino dos Cogumelos - Mario e Luigi!</p>
     </div>
     <button>Entre em Contato</button>
+
+    <div class="image-section">
+        <img src="img/mario.png" alt="Mario e Luigi">
+    </div>
 </body>
 </html>
