ajustado a seção de imagem para logo-mario e removido estilo desnecessário do body

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <button>Entre em Contato</button>
 
-    <div class="image-section">
+    <div class="logo-mario">
         <img src="img/mario.png" alt="Mario e Luigi">
     </div>
 </body>
