att nome da class

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <button>Entre em Contato</button>
 
-    <div class="logo-mario">
+    <div class="logo-mario-luigi">
         <img src="img/mario.png" alt="Mario e Luigi">
     </div>
 </body>
