--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
         <p>Você já se deparou com uma situação de emergência com encanamento? Vazamentos inesperados, canos
             entupidos ou torneiras que não param de pingar? Não se preocupe, porque estamos aqui para salvar o dia!
             Apresentamos a vocês os encanadores mais famosos do Reino dos Cogumelos - Mario e Luigi!</p>
-            
+
             <button>Entre em Contato</button>
     </div>
 
+    <div class="caixa-video">
+        <video src="Video/video.mp4" autoplay muted loop></video>
+    </div>
     
 
     <div class="logo-mario-luigi">
