ajustado a estrutura do HTML e CSS, renomeando classes e removendo estilos desnecessários

--- a/index.html
+++ b/index.html
@@ -1,43 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Mario Bros Service</title>
-</head>
-<body>
-    <div class="container">
-        <img src="img/icon.png" alt="icon do Mario Bros">
-    </div>
+  </head>
+  <body>
+    <div class="caixa-mae">
+      <div class="caixa-principal">
+        <img src="img/logo.png" alt="Logo do Mario Bros" />
 
-    <div class="navbar">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Fale Conosco</a></li>
-            <li><a href="#">Nosso Serviço</a></li>
-        </ul>
-    </div>
+        <p>
+          Encanadores Mario & Luigi - Resolvendo Seus Problemas Hidráulicos Com
+          Estilo!
+        </p>
+        <p>
+          Você já se deparou com uma situação de emergência com encanamento?
+          Vazamentos inesperados, canos entupidos ou torneiras que não param de
+          pingar? Não se preocupe, porque estamos aqui para salvar o dia!
+          Apresentamos a vocês os encanadores mais famosos do Reino dos
+          Cogumelos - Mario e Luigi!
+        </p>
 
-    <div class="content">
-        <img src="img/logo.png" alt="Logo do Mario Bros">
-
-        <p> Encanadores Mario & Luigi - Resolvendo Seus Problemas Hidráulicos Com Estilo!</p>
-        <p>Você já se deparou com uma situação de emergência com encanamento? Vazamentos inesperados, canos
-            entupidos ou torneiras que não param de pingar? Não se preocupe, porque estamos aqui para salvar o dia!
-            Apresentamos a vocês os encanadores mais famosos do Reino dos Cogumelos - Mario e Luigi!</p>
-
-            <button>Entre em Contato</button>
-    </div>
-
-    <div class="caixa-video">
+        <button>Entre em Contato</button>
+      </div>
+      <div class="caixa-video">
         <video src="Video/video.mp4" autoplay muted loop></video>
-    </div>
-    
+      </div>
 
-    <div class="logo-mario-luigi">
-        <img src="img/mario.png" alt="Mario e Luigi">
+      <div class="logo-mario-luigi">
+        <img src="img/mario.png" alt="Mario e Luigi" />
+      </div>
     </div>
-
-</body>
+  </body>
 </html>
