criado uma div nome da class mascara

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <img src="img/logo.png" alt="Logo do Mario Bros" />
 
         <p>
-          Encanadores Mario & Luigi - Resolvendo Seus Problemas Hidráulicos Com
-          Estilo!
+          Encanadores Mario & Luigi - Resolvendo Seus Problemas Hidráulicos Com Estilo!
         </p>
         <p>
           Você já se deparou com uma situação de emergência com encanamento?
@@ -28,12 +27,13 @@
 
       <div class="caixa-video">
             <video src="Video/video.mp4" autoplay muted loop></video>
+            <div class="mascara"></div>
         </div>
 
       <div class="logo-mario-luigi">
         <img src="img/mario.png" alt="Mario e Luigi" />
       </div>
-      
+
     </div>
 
         
