criando tag de link para contato

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
           Cogumelos - Mario e Luigi!
         </p>
 
+       
+
         <button>Entre em Contato</button>
       </div>
 
@@ -37,6 +39,11 @@
 
     </div>
 
+
+
+        <a href="https://w.app/kh6jvj">
+            <img width="94" height="94" src="https://img.icons8.com/3d-fluency/94/whatsapp.png" alt="whatsapp"/>
+        </a>
         
   </body>
 </html>
