criando uma class do contato

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
 
-        <a href="https://w.app/kh6jvj">
+        <a href="https://w.app/kh6jvj" class="link-whatsapp">
             <img width="94" height="94" src="https://img.icons8.com/3d-fluency/94/whatsapp.png" alt="whatsapp"/>
         </a>
         
