add no html no body <div> com menu e img e colocado class na div seria nav-bar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <title>Mario Bros Service</title>
   </head>
   <body>
+
+    <div class="header">
+      
+    <img src="img/icon.png" alt="Icone do Mario Bros" />
+      <h1>Mario Bros Service</h1>
+        <a>Home</a>
+        <a>Nosso Serviços</a>
+        <a>Fala Conosco</a>
+    </div>
+
+
+
     <div class="caixa-mae">
       <div class="caixa-principal">
         <img src="img/logo.png" alt="Logo do Mario Bros" />
