criado um formulario no html e colado class para fazer estilização

--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
         </a>
 
 
-        
+        <form class="formulario">
+           <input type="text" placeholder="Digite sua mensagem" />
+           <input type="number" placeholder="Digite seu número" />
+           <textarea placeholder="Digite seu problema aqui"></textarea>
+        </form>
         
   </body>
 </html>
