--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         <form class="formulario">
            <input type="text" placeholder="Digite sua mensagem" />
            <input type="number" placeholder="Digite seu número" />
-           <textarea placeholder="Digite seu problema aqui"></textarea>
+           <textarea placeholder="Digite seu problema aqui..."></textarea>
+                  <button type="submit">Pedir orçamento</button>
         </form>
         
   </body>
