--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
            <textarea placeholder="Digite seu problema aqui..."></textarea>
                   <button type="submit">Pedir orçamento</button>
         </form>
+
+        <div class="mascara-formulario"></div>
         
   </body>
 </html>
