criando uma função

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
        
 
-        <button>Entre em Contato</button>
+        <button onclick="">Entre em Contato</button>
       </div>
 
       <div class="caixa-video">
