criando função para evento do botao do formulário

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
        
 
-        <button onclick="">Entre em Contato</button>
+        <button onclick="cliqueiNoBotao()">Entre em Contato</button>
       </div>
 
       <div class="caixa-video">
@@ -67,7 +67,7 @@
                   <button type="submit">Pedir orçamento</button>
         </form>
 
-        <div class="mascara-formulario"></div>
+      <!----<div class="mascara-formulario"></div>--->
         
   </body>
   <script src="script.js"></script>
