trocado nome da função

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
        
 
-        <button onclick="cliqueiNoBotao()">Entre em Contato</button>
+        <button onclick="mostrarForm()">Entre em Contato</button>
       </div>
 
       <div class="caixa-video">
