criado a função e dando funcionalidade para masdcara e form

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                   <button type="submit">Pedir orçamento</button>
         </form>
 
-                  <div class="mascara-formulario"></div>
+                  <div class="mascara-formulario" onclick="esconderForm()"></div>
         
   </body>
   <script src="script.js"></script>
