--- a/index.html
+++ b/index.html
@@ -60,12 +60,15 @@
         </a>
 
 
-        <form class="formulario">
-           <input type="text" placeholder="Digite sua mensagem" />
-           <input type="number" placeholder="Digite seu número" />
-           <textarea placeholder="Digite seu problema aqui..."></textarea>
+      <form class="formulario"
+        action="https://formcarry.com/s/-4XXBUG1sVQ"
+        method="POST"
+        enctype="multipart/form-data">
+           <input type="text" name="nome "placeholder="Digite sua mensagem" />
+           <input type="number" name="tel"placeholder="Digite seu número" />
+           <textarea name="duvida"placeholder="Digite seu problema aqui..."></textarea>
                   <button type="submit">Pedir orçamento</button>
-        </form>
+      </form>
 
                   <div class="mascara-formulario" onclick="esconderForm()"></div>
         
