criando texto na barra de nav- nossos serviço

--- a/nosso-serviço.html
+++ b/nosso-serviço.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-nosso-serviço.css">
     <title>Nosso Serviços</title>
 </head>
 <body>
-    <h1>
-        Nosso Serviços
-    </h1>
+    <div>
+        <div>
+            <h1>
+                Nosso Serviços
+            </h1>
+        </div>
+
+        <div>
+            <img src="img/logo.png" alt="lg-img-mario">
+
+            <p>
+                Nossa empresa oferece serviços de alta qualidade, com profissionais experientes e equipamentos
+                de última geração. Nossa equipe trabalha arduamente para garantir que cada cliente.
+            </p>
+        </div>
+    </div>    
 </body>
 </html>
