add video e estilizando

--- a/nosso-serviço.html
+++ b/nosso-serviço.html
@@ -25,6 +25,12 @@
                 de última geração. Nossa equipe trabalha arduamente para garantir que cada cliente.
             </p>
         </div>
+
+        <div class="caixa-video-serviço">   
+            <video src="Video/video.mp4"autoplay loop muted></video>
+        </div>
+        
+
     </div>    
 </body>
 </html>
