estilizando e montando acaba de nav-nosso serviço

--- a/nosso-servico.html
+++ b/nosso-servico.html
@@ -4,33 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="style-nosso-serviço.css">
+    <link rel="stylesheet" href="style-nosso-servico.css">
     <link href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Modak&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Nosso Serviços</title>
 </head>
 <body>
-    <div>
-        <div>
-            <h1>
-                Nosso Serviços
-                <img src="img/icon.png" alt="icon-img"> 
-            </h1>
-        </div>
+    <header class="header">
+        <img src="img/icon.png" alt="Icone do Mario Bros" />
+        <a href="index.html">Home</a>
+        <a href="nosso-servico.html" class="ativo">Nosso Serviços</a>
+    </header>
 
-        <div>
-            <img src="img/logo.png" alt="lg-img-mario">
-
-            <p>
+    <main>
+        <section>
+            <h1>Nossos Serviços</h1>
                 Nossa empresa oferece serviços de alta qualidade, com profissionais experientes e equipamentos
-                de última geração. Nossa equipe trabalha arduamente para garantir que cada cliente.
+                de última geração. Nossa equipe trabalha arduamente para garantir que cada cliente receba o melhor atendimento.
             </p>
-        </div>
+        </section>
 
-        <div class="caixa-video-serviço">   
-            <video src="Video/video.mp4"autoplay loop muted></video>
+        <div class="caixa-video-servico">   
+            <video src="Video/video.mp4" autoplay loop muted></video>
         </div>
-        
-
-    </div>    
+    </main>
 </body>
 </html>
