--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       
     <img src="img/icon.png" alt="Icone do Mario Bros" />
         <a>Home</a>
-        <a href="nosso-serviço.html">Nosso Serviços</a>
+        <a href="nosso-servico.html">Nosso Serviços</a>
         <a>Fala Conosco</a>
     </div>
 
