--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
 
-        <a href="https://w.app/kh6jvj" class="link-whatsapp">
+        <a href="https://wa.me/5517992441005?text=Ola!%20Tudo%20bem%3F" class="link-whatsapp">
             <img width="70" height="70" src="https://img.icons8.com/3d-fluency/94/whatsapp.png" alt="whatsapp"/>
         </a>
 
